--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,19 @@
 
     <application
             android:allowBackup="true"
+            android:hardwareAccelerated="true"
             android:icon="@mipmap/ic_launcher1"
             android:label="@string/app_name"
             android:networkSecurityConfig="@xml/network_security_config"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:hardwareAccelerated="true"
             android:theme="@style/AppTheme">
-
+        <activity android:name=".ParticipantActivity.Notices">
+        </activity>
+        <activity android:name=".ParticipantActivity.RPinfo">
+        </activity>
+        <activity android:name=".ParticipantActivity.EventSchedule">
+        </activity>
         <activity android:name=".ParticipantActivity.ParticipantDetails">
         </activity>
         <activity android:name=".ParticipantActivity.ParticipantList">
